@@ -4,12 +4,12 @@
       "lib": "jquery",
       "name": "jQuery",
       "version": "3.3.1",
-      "url": "https://code.jquery.com/jquery-3.3.1.min.js",
+      "url": "https://code.jquery.com/jquery-$v.min.js",
       "dest": "program/js/jquery.min.js",
       "sha1": "0dc32db4aa9c5f03f3b38c47d883dbd4fed13aae",
       "license": "MIT",
       "copyright": "Copyright JS Foundation and other contributors",
-      "source": "https://github.com/jquery/jquery/tree/3.3.1"
+      "source": "https://github.com/jquery/jquery/tree/$v"
     },
     {
       "lib": "jstz",
@@ -25,8 +25,9 @@
     {
       "lib": "publickey",
       "name": "PublicKey.js",
-      "version": "0e011cb",
-      "url": "https://raw.githubusercontent.com/diafygi/publickeyjs/0e011cb18907a1adc0313aa92e69cd8858e1ef66/publickey.js",
+      "version": "0e011cb1",
+      "url": "https://raw.githubusercontent.com/diafygi/publickeyjs/$v/publickey.js",
+      "api_url": "https://api.github.com/repos/diafygi/publickeyjs/contents/publickey.js?ref=$v",
       "dest": "program/js/publickey.js",
       "sha1": "d0920e190754e024c4be76ad5bbc7e76b2e37a4d",
       "license": "GPLv3",
@@ -36,7 +37,7 @@
     {
       "lib": "tinymce",
       "version": "4.5.8",
-      "url": "http://download.ephox.com/tinymce/community/tinymce_4.5.8.zip",
+      "url": "http://download.ephox.com/tinymce/community/tinymce_$v.zip",
       "dest": "program/js",
       "sha1": "08b0757264adb86066940bbafb7aa9ec0c7c6685",
       "license": "LGPL",
@@ -63,17 +64,18 @@
       "lib": "openpgp",
       "name": "OpenPGP.js",
       "version": "2.6.2",
-      "url": "https://raw.githubusercontent.com/openpgpjs/openpgpjs/v2.6.2/dist/openpgp.min.js",
+      "url": "https://raw.githubusercontent.com/openpgpjs/openpgpjs/v$v/dist/openpgp.min.js",
+      "api_url": "https://api.github.com/repos/openpgpjs/openpgpjs/contents/dist/openpgp.min.js?ref=v$v",
       "dest": "plugins/enigma/openpgp.min.js",
       "sha1": "cce0087eb20328453b9378a2b01cc6339cef97b2",
       "license": "LGPL",
       "copyright": "Copyright (c) OpenPGP Development Team",
-      "source": "https://github.com/openpgpjs/openpgpjs/blob/v2.6.2/dist/openpgp.js"
+      "source": "https://github.com/openpgpjs/openpgpjs/blob/v$v/dist/openpgp.js"
     },
     {
       "lib": "codemirror",
       "version": "5.34.0",
-      "url": "https://codemirror.net/codemirror-5.34.0.zip",
+      "url": "https://codemirror.net/codemirror-$v.zip",
       "dest": "plugins/managesieve/codemirror",
       "sha1": "24d0834c6a5c4b89c4c82ca2ea31e574b0751b32",
       "license": "MIT",
@@ -87,7 +89,7 @@
       "lib": "bootstrap",
       "name": "Bootstrap",
       "version": "4.1.0",
-      "url": "https://github.com/twbs/bootstrap/releases/download/v4.1.0/bootstrap-4.1.0-dist.zip",
+      "url": "https://github.com/twbs/bootstrap/releases/download/v$v/bootstrap-$v-dist.zip",
       "dest": "skins/elastic/deps",
       "sha1": "90abd51cf27a3dc4823eed6c1de620725f068b6c",
       "license": "MIT",
@@ -101,11 +103,12 @@
       "lib": "less",
       "name": "LessJS",
       "version": "2.7.3",
-      "url": "https://raw.githubusercontent.com/less/less.js/v2.7.3/dist/less.min.js",
+      "url": "https://raw.githubusercontent.com/less/less.js/v$v/dist/less.min.js",
+      "api_url": "https://api.github.com/repos/less/less.js/contents/dist/less.min.js?ref=v$v",
       "dest": "skins/elastic/deps/less.min.js",
       "sha1": "45ea4f9fed6c0568ec11faba048c3e3cb7612e9e",
       "license": "Apache-2.0",
-      "source": "https://raw.githubusercontent.com/less/less.js/v2.7.3/dist/less.js"
+      "source": "https://raw.githubusercontent.com/less/less.js/v$v/dist/less.js"
     }
   ]
 }
